# Surgify-AI

./: .gitignore  Makefile  README.md  main_context.md  package.json  skills-lock.json
app/: globals.css  landing.css  layout.tsx  page.tsx
app/(app)/: layout.tsx  shell.css
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: catalog.py  deps.py  patient.py  results.py  router.py  sessions.py  vision.py  websocket.py
backend/app/data/: anatomy_regions.json  coach_rules.json  instruments.json  patients.json
backend/app/data/scenarios/: forearm_laceration.json  incision_path.json  needle_positioning.json  peg_transfer.json
backend/app/services/: coaching_engine.py  data_store.py  ocr_service.py  scoring_engine.py  simulation_engine.py  vision.py  vitals.py  websocket_manager.py
backend/docs/: frontend-api-contract.md  scenario-authoring.md  websocket-events.md
backend/frontend-types/: surgify-api.ts
backend/scripts/: seed_data.py  smoke_check.py  test_ai.py  test_ocr.py
components/anatomy/: AnatomyViewer.tsx  SceneErrorBoundary.tsx
components/dashboard/: MetricCard.tsx  RecentSessionsTable.tsx  SkillChart.tsx
components/layout/: AppSidebar.tsx  DashboardHeader.tsx  MobileNav.tsx
components/results/: ComparisonChart.tsx  TrajectoryReplay.tsx
components/simulation/: HospitalScene.tsx  ToolBar.tsx  (+3 more)
data/: modelConfig.ts
frontend/: .gitignore  README.md  package-lock.json  package.json
tests/: rendered-html.test.mjs
types/: index.ts  simulation.ts
(+97 files in other folders)
