[project]
name = "surgify-backend"
version = "0.1.0"
description = "Surgify AI — surgical simulation training backend (educational prototype)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",  # was transitive via mediapipe; the aruco adapter still needs it
    "ollama>=0.4.0",
    "edge-tts>=6.1.12",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
]

[dependency-groups]
dev = ["httpx>=0.27"]

[tool.uv]
package = false
